<resources>

    <string name="app_name">Solar power calculator</string>
    <string name="app_url">http://solarpowercalc.appspot.com</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Solar power calculator</string>
    <string name="greeting">Hello!.. nsert your data</string>
    <string name="title_activity_search_result">Search result</string>
    <string name="postcode">Postcode</string>
    <string name="price">Price</string>
    <string name="capacity">Capacity</string>
    <string name="search">Search</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="no_items">No items</string>
    <string name="no_results">No results</string>
    <string name="aud">AUD</string>
    <string name="w">W</string>
    <string name="voltage">Voltage</string>
    <string name="v">V</string>
    <string name="dimensions">Dimensions</string>
    <string name="mm">mm</string>
    <string name="title_activity_electricity_production">Electricity production</string>
    <string name="calculation">Calculation</string>
    <string name="electricity_production">Electricity production</string>
    <string name="system_cost">System cost</string>
    <string name="panel_output">Panel output</string>
    <string name="panel_efficiency">Panel efficiency</string>
    <string name="from_0_to_100">From 0 to 100</string>
    <string name="inverter_efficiency">Inverter efficiency</string>
    <string name="calculate">Calculate</string>
    <string name="calculation_result">Calculation result</string>
    <string name="return_on_investment">Return on investment</string>
    <string name="months">Months</string>
    <string name="w_per_month">W/month</string>
    <string name="current_address">Current address</string>
    <string name="update">Update</string>
    <string name="map">Map</string>
    <string name="title_activity_location">Map</string>
    <string name="kw">kW</string>
    <string name="energy_usage">Energy usage</string>
    <string name="quarterly">Quarterly</string>
    <string name="set_current_location">Set current location</string>
    <string name="title_activity_search">Search</string>
    <string name="update_location">Update location</string>
    <string name="title_activity_calculation_result">Result</string>
    <string name="kw_per_year">kW/year</string>
    <string name="years">Years</string>
    <string name="government_rebates">Government rebates</string>
    <string name="aud_per_year">AUD/year</string>
    <string name="DEF_POSTCODE">4000</string>
    <string name="percent_sign">%</string>
    <string name="DEF_EFFICIENCY">100</string>
    <string name="efficiency">Efficiency</string>
    <string name="warranty">Warranty</string>
    <string name="percent_per_year">%/year</string>
    <string name="optimal_angle">Optimal angle</string>
    <string name="degree_sign">°</string>
    <string name="DEF_SYSTEMCOST">5000</string>
    <string name="DEF_ENERGYUSAGE">2000</string>
    <string name="kwh">kWh</string>
    <string name="DEF_PANELOUTPUT">10</string>

</resources>